# JPCZcatalogcolab

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt
docs/: colab-quickstart.md  colab-workflow.md  detector-spec.md  next-meeting-checklist.md  objective-subtype-design.md  validation-plan.md
notebook16-pcolormesh/notebooks/: 22_objective_coastal_box_metrics_and_labels.ipynb  23_objective_regime_timing_and_impact.ipynb  25_continuous_spell_evolution_and_onset_timing.ipynb
notebooks/: 01_data_access_and_masks.ipynb  02_december_benchmark_detector.ipynb  03_classification_and_qa.ipynb  04_ndjf_catalog.ipynb  05_manual_verification_and_position.ipynb  06_gap_merge_catalog.ipynb  07_event_diagnostic_atlas.ipynb  08_objective_subtype_features.ipynb  09_cluster_validation_and_significance.ipynb  10_cluster_composites_and_examples.ipynb  11_temperature_gradient_sensitivity.ipynb  12_masked_t850_sensitivity.ipynb  13_geographic_t850_exclusion_sensitivity.ipynb  14_elevation_masked_t850_sensitivity.ipynb  15_cleaned_low_level_clustering_decision.ipynb  16_cleaned_cluster_composites_and_examples.ipynb  17_spatial_eof_analysis.ipynb  18_cleaned_cluster_quartile_analysis.ipynb  19_cleaned_cluster_date_pairing_and_sequence.ipynb  20_eastern_siberian_high_association.ipynb  21_complete_eof_analysis.ipynb  22_objective_coastal_box_metrics_and_labels.ipynb  23_objective_regime_timing_and_impact.ipynb  24_objective_regime_manual_verification_atlas.ipynb  25_continuous_spell_evolution_and_onset_timing.ipynb  26_timing_group_manual_verification_atlas.ipynb  README.md
(+29 files in other folders)
