[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpcz-catalog"
version = "0.1.0"
description = "Cloud-native JPCZ event catalog tooling for Colab and ERA5."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Angelica Ramirez" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

